# fishmlserv

./: Dockerfile  MANIFEST.in  README.md  Untitled.ipynb  fly.toml  pyproject.toml  r.txt  requirements.txt
note/: Untitled.ipynb  Untitled1.ipynb  fish.py  knn_fish.ipynb
src/fishmlserv/: knn_pred.py  main.py
src/fishmlserv/model/: manager.py  model.pkl
