[project]
name = "fishmlserv"
version = "0.1.0"
description = "Machine Learning Model - using sklearn(KNeighborsClassifier) using Fastapi, Fly.io"
authors = [
    {name = "mangG907", email = "mang.gee@gmail.com"},
]
dependencies = [
    "fastapi>=0.112.2",
    "uvicorn[standard]>=0.30.6",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
