[project]
name = "fishmlserv"
version = "1.0.0"
description = "Machine Learning Model - using sklearn(KNeighborsClassifier) using Fastapi, Fly.io"
authors = [
    {name = "mangG907", email = "mang.gee@gmail.com"},
]
dependencies = [
    #"fastapi>=0.112.2",
    #"uvicorn[standard]>=0.30.6",
    #"matplotlib>=3.9.2",
    #"scikit-learn>=1.5.1",
    #"pandas>=2.2.2",
    "fire>=0.6.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
]
